increase line height

--- a/text.html
+++ b/text.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="text_container">
-        <p contenteditable="true" style="text-align: center;">Change this text…</p>
+        <p contenteditable="true" style="text-align: center; line-height: 1.4em;">Change this text…</p>
     </div>
 </body>
 </html>
