--- a/text.html
+++ b/text.html
@@ -13,6 +13,7 @@
           padding: 0;
           margin: 0;
           max-width: 500px;
+          overflow-x: hidden;
       }
       p {
           padding: 0;
