--- a/text.html
+++ b/text.html
@@ -2,64 +2,97 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Haus</title>
-  <meta name="description" content="Haus Wien — Septemer 21 – 27, 2020">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" async defer></script>
-  <style>
-      body {
-          padding: 0;
-          margin: 0;
-          max-width: 500px;
-          overflow-x: hidden;
-      }
-      p {
-          padding: 0;
-          margin: 0;
-      }
-      #text_container {
-          width: 100vw;
-          height: 100vw;
-          max-width: 500px;
-          max-height: 500px;
-          border-bottom: 1px dotted grey;
-          border-right: 1px dotted grey;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-      }
-      #text {
-          outline: none;
-      }
-      #text:focus {
-          outline: none;
-      }
-  </style>
+    <meta charset="utf-8">
+    <title>Haus</title>
+    <meta name="description" content="Haus Wien — Septemer 21 – 27, 2020">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" async defer></script>
+    <script src="dom-to-image.min.js"></script>
+    <script src="filesaver.min.js"></script>
+
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            max-width: 500px;
+            overflow-x: hidden;
+        }
+        p {
+            padding: 0;
+            margin: 0;
+        }
+        #text_container {
+            width: 100vw;
+            height: 100vw;
+            max-width: 500px;
+            max-height: 500px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #font-size {
+            padding: 0;
+        }
+        .border {
+        border-bottom: 1px dotted grey;
+        border-right: 1px dotted grey;
+        }
+        .padded {
+            padding: 20px;
+        }
+        #text {
+            outline: none;
+        }
+        #text:focus {
+            outline: none;
+        }
+        .img
+        {
+            animation: flash .5s;
+        }
+
+        @keyframes flash {
+            from { opacity: 0; }
+            to   { opacity: 1; }
+        }
+    </style>
 </head>
 
 <body>
-    <div id="text_container">
-        <p id="text" contenteditable="true" style="text-align: center; line-height: 1.4em; font-size: 30px">Change this text…</p>
+    <div class="border" id="frame">
+        <div id="text_container">
+            <p id="text" contenteditable="true" style="text-align: center; line-height: 1.4em; font-size: 30px">Change this text…</p>
+        </div>
     </div>
-    <div style="width: 100%; text-align: center;">
-        <input 
-        id="font-size" 
-        type="range" 
-        min="12" 
-        max="72" 
-        value="30"
-        style="width: 80%; margin: 20px; box-sizing: border-box;"
-        >
-        <button class="fontStyle" onclick="document.execCommand('italic',false,null);" title="Italicize Highlighted Text"><i>Italic</i>
-        </button>
+    <div style="width: 100%; text-align: center;" id="tool_container">
+        <div class="border padded">
+            <input 
+            id="font-size" 
+            type="range" 
+            min="12" 
+            max="72" 
+            value="30"
+            style="width: 80%; margin: 20px; box-sizing: border-box;"
+            >
+            <button class="fontStyle" onclick="document.execCommand('italic',false,null);" title="Italicize Highlighted Text"><i>Italic</i>
+            </button>
+        </div>
+        <div class="border padded">
+            <button id="save">Generate Image…</button>
+        </div>
+    </div>
+    <div class="border padded" style="display: none; text-align: center;">
+        <button id="revert">Make another</button>
     </div>
 </body>
 <script>
     var slider = document.getElementById('font-size');
+    var frame = document.getElementById('frame');
     var container = document.getElementById('text_container');
     var text = document.getElementById('text');
+    var saveBtn = document.getElementById('save');
+    var backBtn = document.getElementById('revert');
 
     slider.addEventListener('input', function() {
         var size = slider.value;
@@ -70,5 +103,31 @@
     container.addEventListener('click', function() {
         text.focus();
     })
+
+    save.addEventListener('click', function() {
+        domtoimage.toSvg(container)
+        .then(function (dataUrl) {
+            var img = new Image();
+            img.src = dataUrl;
+            img.className="img";
+            container.style.display='none';
+            document.getElementById('tool_container').style.display="none";
+            frame.appendChild(img);
+            frame.dataset.content="img";
+            backBtn.parentElement.style.display="block";
+        })
+        .catch(function (error) {
+            console.error('oops, something went wrong!', error);
+        });
+    })
+
+    backBtn.addEventListener('click', function() {
+        frame.removeChild(frame.getElementsByTagName('img')[0]);
+        frame.dataset.content="edit";
+        container.style.display='flex';
+        document.getElementById('tool_container').style.display="block";
+        this.parentElement.style.display="none";
+    })
+
 </script>
 </html>
