--- a/text.html
+++ b/text.html
@@ -61,7 +61,7 @@
 
 <body>
     <div class="border" id="frame">
-        <div id="text_container">
+        <div id="text_container" style="background-color: #fff;">
             <p id="text" contenteditable="true" style="text-align: center; line-height: 1.4em; font-size: 30px">Change this text…</p>
         </div>
     </div>
