--- a/text.html
+++ b/text.html
@@ -61,7 +61,7 @@
 
 <body>
     <div class="border" id="frame">
-        <div id="text_container" style="background-color: #fff;">
+        <div id="text_container">
             <p id="text" contenteditable="true" style="text-align: center; line-height: 1.4em; font-size: 30px">Change this text…</p>
         </div>
     </div>
@@ -111,10 +111,11 @@
             height: node.offsetHeight * scale,
             width: node.offsetWidth * scale,
             style: {
-            transform: "scale(" + scale + ")",
-            transformOrigin: "top left",
-            width: node.offsetWidth + "px",
-            height: node.offsetHeight + "px"
+                transform: "scale(" + scale + ")",
+                transformOrigin: "top left",
+                width: node.offsetWidth + "px",
+                height: node.offsetHeight + "px",
+                'background-color': 'white',
             }
         })
         .then(function (dataUrl) {
