no more dumb questions

--- a/text.html
+++ b/text.html
@@ -75,7 +75,7 @@
         <div id="text_container">
             <p id="text" 
             contenteditable="true" 
-            data-placeholder="" 
+            data-placeholder="Enter your message…" 
             style="text-align: center; line-height: 1.4em; font-size: 30px"></p>
         </div>
     </div>
