--- a/text.html
+++ b/text.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Haus Wien — Septemer 21 – 27, 2020">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="./vendor/piklor.js/src/piklor.min.js"></script>
     <script src="bundle.js" async defer></script>
 
     <style>
@@ -67,6 +68,7 @@
             color:grey;
             font-style:italic;
         }
+
     </style>
 </head>
 
@@ -89,8 +91,6 @@
             value="30"
             style="width: 80%; margin: 20px; box-sizing: border-box;"
             >
-            <!-- <button class="fontStyle" onclick="document.execCommand('italic',false,null);" title="Italicize Highlighted Text"><i>Italic</i>
-            </button> -->
         </div>
         <div class="flex">
             <button id="make" class="border padded">
@@ -115,6 +115,5 @@
     </div>
 </body>
 <script>
-    
 </script>
 </html>
